Added role check
